# jeiguard-ai

./: CHANGELOG.md  Dockerfile  LICENSE  README.md  alert_manager_service.py  anomaly_federated_v101.py  auth_service.py  ci.yml  compliance_service.py  constants.py  cve_correlation_service.py  database.py  demo_live.py  digital_twin_service.py  docker-compose.yml  env.example  gitignore  helm-values.yaml  ids-ia-deployment.yaml  inference_service.py  llm_analyst_service.py  logger.py  main.tf  main_api.py  mlflow_tracking.py  model_v101.py  models.py  otel_tracing.py  preprocessor_service.py  producer_service.py  pyproject.toml  report_service.py  requirements.txt  siem_correlation_engine.py  soar_response_engine.py  streamlit_app.py  test_ids_ia_enterprise.py  threat_intel_service.py  websocket_gateway.py  xai_service.py
.github/workflows/: pages.yml
docs/: 404.html  index.html
k8s_operator/: operator.py
sdk/: __init__.py  jeiguard_sdk.py
terraform/azure/: main.tf
terraform/gcp/: main.tf
tests/: conftest.py  test_api.py
