# ══════════════════════════════════════════════════════════════════════════════
# pyproject.toml — JeiGuard AI
# Configuración unificada de herramientas de calidad de código
# ══════════════════════════════════════════════════════════════════════════════

[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "jeiguard-ai"
version     = "1.0.0"
description = "Sistema de Detección de Intrusiones basado en IA — Proyecto de Grado"
readme      = "README.md"
requires-python = ">=3.11"

dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.3",
    "pydantic>=2.5",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "confluent-kafka>=2.3",
    "elasticsearch>=8.11",
    "joblib>=1.3",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[project.optional-dependencies]
ml = [
    "tensorflow>=2.14",
    "imbalanced-learn>=0.11",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "mypy>=1.7",
    "ruff>=0.1",
    "httpx>=0.25",     # Para tests de FastAPI
]

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths       = ["tests"]
python_files    = ["test_*.py"]
python_classes  = ["Test*"]
python_functions = ["test_*"]
addopts         = "-v --tb=short --cov=services --cov=shared --cov-report=term-missing --cov-fail-under=80"
asyncio_mode    = "auto"

# ── mypy (tipado estático) ────────────────────────────────────────────────────
[tool.mypy]
python_version          = "3.11"
strict                  = true
warn_return_any         = true
warn_unused_configs     = true
warn_redundant_casts    = true
warn_unused_ignores     = true
disallow_untyped_defs   = true
disallow_incomplete_defs= true
check_untyped_defs      = true
no_implicit_optional    = true
show_error_codes        = true
pretty                  = true

[[tool.mypy.overrides]]
module = ["confluent_kafka.*", "elasticsearch.*", "sklearn.*", "tensorflow.*", "joblib.*"]
ignore_missing_imports = true

# ── ruff (linting + format) ───────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length    = 100
indent-width   = 4

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (variables sin usar, imports sin usar)
    "I",   # isort (orden de imports)
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long (gestionado por formatter)
    "N806",  # variable in function should be lowercase (usamos MAYÚSCULAS por convención)
    "N802",  # function name should be lowercase (MAYÚSCULAS por convención del proyecto)
    "N803",  # argument name should be lowercase (MAYÚSCULAS por convención del proyecto)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N806", "N802", "N803", "F841"]

[tool.ruff.format]
quote-style              = "double"
indent-style             = "space"
skip-magic-trailing-comma = false

# ── coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source   = ["services", "shared"]
omit     = ["tests/*", "**/__init__.py", "**/conftest.py"]
branch   = true

[tool.coverage.report]
fail_under   = 80
show_missing = true
skip_covered = false
